--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.1",
     "mongodb": "^7.0.0",
     "mongoose": "^8.2.2"
